<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivity">

    <TextView
        android:id="@+id/genderTextResponse"
        android:layout_width="409dp"
        android:layout_height="58dp"
        android:text="@string/genderOtherGreeting"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/boolTextResponse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/showBool1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        app:layout_constraintBottom_toTopOf="@+id/passwordTextResponse"
        app:layout_constraintEnd_toStartOf="@+id/showBool2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boolTextResponse" />

    <CheckBox
        android:id="@+id/showBool2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        app:layout_constraintBottom_toTopOf="@+id/passwordTextResponse"
        app:layout_constraintEnd_toStartOf="@+id/showBool3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/showBool1"
        app:layout_constraintTop_toBottomOf="@+id/boolTextResponse" />

    <CheckBox
        android:id="@+id/showBool3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        app:layout_constraintBottom_toTopOf="@+id/passwordTextResponse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/showBool2"
        app:layout_constraintTop_toBottomOf="@+id/boolTextResponse" />

    <RadioButton
        android:id="@+id/radioButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        app:layout_constraintBottom_toTopOf="@+id/radioButton8"
        app:layout_constraintEnd_toStartOf="@+id/radioButton6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/radioButton4"
        app:layout_constraintTop_toBottomOf="@+id/radioButton2" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        app:layout_constraintBottom_toTopOf="@+id/radioButton5"
        app:layout_constraintEnd_toStartOf="@+id/radioButton3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/radioButton1"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextResponse" />

    <RadioButton
        android:id="@+id/radioButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        app:layout_constraintBottom_toTopOf="@+id/radioButton4"
        app:layout_constraintEnd_toStartOf="@+id/radioButton2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextResponse" />

    <RadioButton
        android:id="@+id/radioButton6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        app:layout_constraintBottom_toTopOf="@+id/radioButton9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/radioButton5"
        app:layout_constraintTop_toBottomOf="@+id/radioButton3" />

    <RadioButton
        android:id="@+id/radioButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        app:layout_constraintBottom_toTopOf="@+id/radioButton7"
        app:layout_constraintEnd_toStartOf="@+id/radioButton5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton1" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        app:layout_constraintBottom_toTopOf="@+id/radioButton6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/radioButton2"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextResponse" />

    <RadioButton
        android:id="@+id/radioButton9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/radioButton8"
        app:layout_constraintTop_toBottomOf="@+id/radioButton6" />

    <RadioButton
        android:id="@+id/radioButton7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/radioButton8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton4" />

    <RadioButton
        android:id="@+id/radioButton8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/radioButton9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/radioButton7"
        app:layout_constraintTop_toBottomOf="@+id/radioButton5" />

    <TextView
        android:id="@+id/boolTextResponse"
        android:layout_width="401dp"
        android:layout_height="22dp"
        android:text="@string/boolGreeting"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/passwordTextResponse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderTextResponse" />

    <TextView
        android:id="@+id/passwordTextResponse"
        android:layout_width="401dp"
        android:layout_height="59dp"
        android:text="@string/passwordGreeting"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/radioButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boolTextResponse" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settingsText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton8" />

</androidx.constraintlayout.widget.ConstraintLayout>